force-app/main/default/objects/BOV_Submission__c/BOV_Submission__c.object-meta.xml
<CustomObject>
    <label>BOV Submission</label>
    <nameField>
        <displayFormat>BOV-{0000}</displayFormat>
        <label>BOV Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOV Submissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>