force-app/main/default/objects/BOV_Submission__c/fields/BOV_Amount__c.field-meta.xml
<CustomField>
    <fullName>BOV_Amount__c</fullName>
    <label>BOV Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>