force-app/main/default/objects/BOV_Submission__c/fields/Broker__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY. A comment placed ABOVE
        <CustomField> breaks `sf` deploy at source conversion with a misleading
        "unable to find matching parent xml file" error.

        =====================================================================================
        ADDED 2026-08-20. THE BROKER RESPONSE'S CONTACT BECOMES A VALIDATED LOOKUP.
        =====================================================================================
        Until now an analyst recording a BOV response typed the firm into Broker_Firm__c and
        the person into Contact_Name__c, both free Text, both unvalidated, both able to name a
        broker who does not exist as a Contact. THIS FIELD IS NOW THE ANALYST'S ONLY BROKER
        ENTRY POINT ON THIS OBJECT: Broker_Firm__c and Contact_Name__c are removed from
        layouts/BOV_Submission__c-BOV Submission Layout in the same change, so the picker below
        is the only place a broker can be named.

        XML SHAPE IS COPIED FROM Broker_Assignment__c.Broker__c, DELIBERATELY AND EXACTLY.
        Same referenceTo, same ACTIVE non-optional lookupFilter, same errorMessage string, same
        deleteConstraint. Disposition__c.Broker__c and Lease_Inquiry__c.Broker__c are the other
        two precedents that carry the same filter. There is no Broker__c OBJECT in this org;
        every "broker" in this application is a Contact on the Contact.Broker RECORD TYPE.

        🔴 TWO CORRECTIONS, 2026-08-20. Quoted rather than deleted, because both were repeated
        across several files and a reader may be carrying either one:

          RETRACTED: "Disposition__c.Broker__c, Lease_Inquiry__c.Broker__c and
          Opportunity.Broker__c are the other three precedents and carry the same filter."
        Opportunity.Broker__c has NO <lookupFilter> ELEMENT AT ALL. Verified twice by reading
        that file in full. It was never a precedent for this field, and three other files in
        this repo repeat the same false claim. Nor is one being added: Opportunity.Broker__c is
        MACHINE-STAMPED by LeadConvertService at conversion rather than human-picked, so an
        active non-optional filter there would make lead conversion fail hard for any Contact
        not on the Broker record type - and the Broker-Protection intake path is exactly where
        non-Broker-record-type Contacts arise. Decided OUT of scope by the user; documentation
        corrected here instead.

          RETRACTED: "every 'broker' in this application is a Contact flagged Is_Broker__c."
        The broker definition MOVED to the Contact.Broker record type on 2026-08-20. Measured
        on usman-dpeg: ZERO Contacts carried Is_Broker__c = true while 19 sat on the record
        type, so every broker query in the application was matching nothing. Is_Broker__c is
        RETAINED on Contact but is no longer the definition; its retirement is a separate,
        deferred task. See objects/Contact/fields/Is_Broker__c.field-meta.xml.

        =====================================================================================
        🔴 THE LABEL IS "Broker Contact", NOT "Contact" AND NOT "Broker". BOTH ARE TAKEN.
        =====================================================================================
        MEASURED, not assumed, in objects/BOV_Submission__c/fields/ on this branch:
            Contact_Name__c    carries <label>Contact</label>
            Broker_Display__c  carries <label>Broker</label>
            Broker_Firm__c     carries <label>Broker Firm</label>
        All three STAY IN THE SCHEMA (see the next block), so either alternative would put two
        identically labelled entries in the report field picker, the Setup field list, the
        Dynamic Forms palette and every list view column chooser, with nothing to tell them
        apart. Salesforce permits it; a human cannot use it. "Broker Contact" is unique on this
        object and sits unambiguously beside "Broker Firm".

        =====================================================================================
        🔴 Broker_Firm__c AND Contact_Name__c ARE NOW DERIVED. THEY ARE NOT RETIRED.
        =====================================================================================
        A before-save Apex stamp (BovSubmissionBrokerStampService, delivered alongside this field by the
        development half of this change) writes both Text fields from the Contact chosen here,
        keyed on this lookup CHANGING. The writer changes from a human to the stamp; the fields
        themselves keep being populated exactly as before.

        THEY SURVIVE BECAUSE FIVE LIVE CONSUMERS READ THEM, and none is being repointed:
            BovSubmissionTriggerHandler        copies Broker_Firm__c onto the parent
                                               Disposition__c.Selected_Broker__c on approval
            BovSubmissionService.replaceSelectedBroker   reads challenger.Broker_Firm__c
            Broker_Display__c (formula)        Broker_Firm__c and Contact_Name__c
            BovController.BovRow               brokerFirm / contactName
            lwc/bovComparisonMatrix,
            lwc/backupBrokers                  render those two DTO members as the
                                               "Broker Firm" and "Contact" columns

        ⚠ THIS FIELD IS DELIBERATELY NOT ADDED TO BovSubmissionSelector OR TO BovController.
        Nothing reads it. Adding it to either WITH USER_MODE selector method would make an
        FLS denial throw QueryException "No such column" and red banner the comparison matrix
        for every persona until the permission sets below deploy, in exchange for a column no
        consumer consumes.

        =====================================================================================
        🔴 SEED HAZARD. scripts/seed-broker-contacts.apex CAN SILENTLY NULL THIS FIELD.
        =====================================================================================
        That script deletes every broker Contact in the org.

        ⚠ CORRECTED 2026-08-20 (twice over). This block read:

            RETRACTED: "That script opens with a mass delete of every broker Contact:
            delete [SELECT Id FROM Contact WHERE Is_Broker__c = true];"

        Both halves are stale. (1) The inline delete no longer exists: it was hoisted into a
        six-step structure with a working pre-DML guard scan and an abort gate, and this field
        IS already in that script's BROKER_LOOKUPS map. (2) The predicate is now the
        Contact.Broker record type - which MADE THE HAZARD REAL rather than reducing it: under
        the old predicate the delete matched ZERO rows org-wide and was a guaranteed no-op;
        under the new one it matches the org's ~19 live brokers. The rest of this block still
        stands and matters more than it did.

        With deleteConstraint SetNull, re-running it NULLS Broker__c on every BOV Submission
        holding it, with no error and no warning. WORSE HERE THAN ON Disposition__c: the two
        stamped Text fields are STORED Text, not formulas, so they are left behind still naming
        the vanished broker, and Broker_Display__c is a formula over both of them. The comparison
        matrix therefore keeps rendering a deleted broker's firm and name with nothing to notice.
        That is corruption that reads as health.

        MITIGATION IS IN THE SCRIPT, NOT HERE. seed-broker-contacts.apex carries a BROKER_LOOKUPS
        map and a banner reading "IF A FIFTH Contact LOOKUP IS EVER ADDED, ADD IT HERE"; this
        field is that fifth lookup, and the development half of this change is extending that
        guard and correcting the script's "four lookups" header prose. 🔴 DO NOT "FIX" THIS BY
        SWITCHING TO deleteConstraint Restrict. That would make the seed fail loudly but would
        also block legitimate Contact deletion for the whole org, and it would diverge from all
        four sibling lookups.

        =====================================================================================
        RELATIONSHIP NAME: Brokered_BOV_Submissions. COLLISION CHECKED, NOT ASSUMED.
        =====================================================================================
        Exactly four fields in this repo carry referenceTo Contact, and their relationshipNames
        are Broker_Assignments, Brokered_Dispositions, Lease_Inquiries and Brokered_Opportunities.
        Nothing on Contact uses BOV_Submissions or Brokered_BOV_Submissions, so both were free.
        The BOV_Submissions that DOES exist in this repo is the child relationship of
        BOV_Submission__c.Disposition__c, whose parent is Disposition__c; relationship names are
        unique PER PARENT OBJECT, so it never contended for the Contact namespace.

        WHY THE Brokered_ PREFIX. Under Contact, a bare "BOV Submissions" reads as "this
        Contact's submissions" when what the list means is "submissions this Contact BROKERS".
        Disposition__c and Opportunity, the two other deal objects carrying a role named Contact
        lookup, both take the Brokered_ form for that reason. Broker_Assignment__c and
        Lease_Inquiry__c take the bare plural only because those objects exist solely to be about
        a broker, so the role is already in the object name.
        ⚠ A relationshipName is disruptive to change after deploy. Settled here, before the
        first deploy, while it costs nothing.

        =====================================================================================
        🔴 FLS: THIS FIELD IS INVISIBLE TO EVERYONE, ADMINS INCLUDED, UNTIL A PERMSET LANDS.
        =====================================================================================
        A Metadata API deployed custom field arrives with NO field permissions for any profile,
        System Administrator included. Read and edit are granted in DPEG_Disposition_Edit and
        read only in DPEG_Disposition_View in the same change. MEASURED: those two are the
        complete set of permission sets in this repo granting any BOV_Submission__c business
        field. Disposition_Dashboard_Access grants only Broker_Display__c, Property_Name__c and
        Selected_Broker__c, all read only formulas that keep evaluating, so it is NOT touched.
        DPEG_Admin_Access grants no BOV_Submission__c field today, so a bare administrator
        already cannot read this object's business fields; this change creates no new admin
        regression and that set must NOT be widened to fix a problem it does not have.
        This file, the layout and the two permission sets must deploy TOGETHER, and never Apex
        first: Apex referencing Broker__c will not compile until the field exists, and the layout
        will not deploy referencing a field that does not exist.

        ⚠ TESTS MUST USE TestDataFactory.createBrokerContact / createBrokerContacts. The lookup
        filter below is ACTIVE and NOT optional.

        🔴 CORRECTED 2026-08-20 - THE REASON GIVEN HERE WAS TRUE AND IS NOW EXACTLY BACKWARDS:

            RETRACTED: "...so a plain createContacts() Contact is refused."

        A plain createContacts() Contact is now ACCEPTED, because TestDataFactory stamps the
        Contact.Broker record type on every Contact it builds. Use createBrokerContact(s)
        anyway - they set the Broker_* fields the stamp service and the comparison matrix read -
        but do NOT rely on createContacts() as a NEGATIVE fixture the way several tests did
        before this change. For a Contact that genuinely is not a broker, use
        TestDataFactory.createNonBrokerContact(s); for proof that this filter enforces at all,
        see classes/BrokerLookupFilterEnforcementTest.

        =====================================================================================
        🔴 THE LOOKUP FILTER ITSELF NOW READS Contact.RecordType.DeveloperName = 'Broker'.
        =====================================================================================
        Chosen over Contact.RecordTypeId (an 18-char Id is not portable across orgs - see
        .forceignore:34-37) and over Contact.RecordType.Name (label-based, brittle under a
        rename or translation). This is the same predicate form already proven live in this org
        since 2026-08-10 in ContactSelector.selectByEmails:262 (`RecordType.DeveloperName =
        'Broker'`). Functional proof - that this shape actually refuses a non-Broker-record-type
        Contact and accepts a Broker-record-type one, not merely that it deploys - is
        classes/BrokerLookupFilterEnforcementTest, whose fixtures are adversarial on purpose
        (a Broker-record-type Contact with Is_Broker__c FALSE must be ACCEPTED, and an
        Investor-record-type Contact with Is_Broker__c TRUE must be REFUSED with
        FIELD_FILTER_VALIDATION_EXCEPTION) so the test cannot pass identically under the old
        checkbox filter and this new one.
    -->
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The broker Contact who gave this BOV response, and the analyst's only broker entry point on this object. Broker Firm and Contact are stamped from this pick before save; both stay in the schema because Apex, Broker Display and the matrix read them.</description>
    <inlineHelpText>Pick the broker who gave this BOV. Only Contacts flagged as brokers appear. Broker Firm and Contact fill in automatically from your pick, which is why they are no longer on this page. Do not try to type them.</inlineHelpText>
    <label>Broker Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Only Broker Contacts can be selected here.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Brokered BOV Submissions</relationshipLabel>
    <relationshipName>Brokered_BOV_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>