force-app/main/default/objects/BOV_Submission__c/fields/Broker_Display__c.field-meta.xml
<CustomField>
    <fullName>Broker_Display__c</fullName>
    <formula>Broker_Firm__c &amp; &quot; — &quot; &amp; Contact_Name__c</formula>
    <label>Broker</label>
    <type>Text</type>
</CustomField>