force-app/main/default/objects/BOV_Submission__c/fields/Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cap_Rate__c</fullName>
    <description>Capitalization rate the broker used to derive this BOV valuation.</description>
    <label>Cap Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>