force-app/main/default/objects/BOV_Submission__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <label>Commission</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>