force-app/main/default/objects/BOV_Submission__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>