force-app/main/default/objects/BOV_Submission__c/fields/Days_To_Market__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Market__c</fullName>
    <label>Days to Mkt</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>